--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         </section>
         <section class="main-input">
             <div class="main-input-container">
-                <span class="search-icon"></span>
-                <input type="text" name="" id="">
+                <span class="search-icon">
+                </span>
+                <input type="search" name="" id="" placeholder="Buscar...">
                 <a class="micro-icon" href=""></a>
             </div>
         </section>
