terminado el clone de Google

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 </li>
                 <li>
                     <a href="">
-                        <img src="https://lh3.googleusercontent.com/ogw/ADea4I7MSt104O2YTwu5PVkZ9KgzYGtOx0cQpRJ2u-P1cQ=s32-c-mo" alt="Imagen de perfil">
+                        <img src="https://lh3.googleusercontent.com/ogw/ADea4I7MSt104O2YTwu5PVkZ9KgzYGtOx0cQpRJ2u-P1cQ=s32-c-mo"
+                            alt="Imagen de perfil">
                     </a>
                 </li>
             </ul>
@@ -44,7 +45,17 @@
         </section>
     </main>
     <footer>
-
+        <ul class="footer-left">
+            <li><a href="">Sobre Google</a></li>
+            <li><a href="">Publicidad</a></li>
+            <li><a href="">Negocios</a></li>
+            <li><a href="">Como funciona la Busqueda</a></li>
+        </ul>
+        <ul class="footer-right">
+            <li><a href="">Privacidad</a></li>
+            <li><a href="">Condiciones</a></li>
+            <li><a href="">Preferencias</a></li>
+        </ul>
     </footer>
 
 </body>
